fixed z-index bug in ie

--- a/assets/stylesheets/layout.css
+++ b/assets/stylesheets/layout.css
@@ -11,8 +11,8 @@ a:hover {color:#3974ac; }
 #error { background: #b00; }
 #notice { background: #0b0; }
 #admin-menu .signout { padding: 0 5px !important; }
-body { margin: 0; padding: 0; font-family: Tahoma, Arial, Sans-Serif; font-size: 15px; color: #333; background: #8a734e url(/plugin_assets/z_b2bbreakfast/images/body-bg.jpg) repeat-x center 258px; line-height: 1.6em; }
-  #upcoming-event { width: 385px; height: 77px; position: absolute; right: 45px; top: 64px; z-index: 100; background: url(/plugin_assets/z_b2bbreakfast/images/first-tuesdays.jpg) no-repeat left top; color: #fff; -moz-box-shadow: 4px 4px 0 rgba(37,92,146,.45); -webkit-box-shadow: 4px 4px 0 rgba(37,92,146,.45); box-shadow: 4px 4px 0 rgba(37,92,146,.45); padding: 100px 0 0 28px;}
+body { margin: 0; padding: 0; font-family: Tahoma, Arial, Sans-Serif; font-size: 15px; color: #333; background: #8a734e url(/plugin_assets/z_b2bbreakfast/images/body-bg.jpg) repeat-x center 258px; line-height: 1.6em; position: relative; z-index: 0; }
+  #upcoming-event { width: 385px; height: 77px; position: absolute; right: 45px; top: 64px; z-index: 5; background: url(/plugin_assets/z_b2bbreakfast/images/first-tuesdays.jpg) no-repeat left top; color: #fff; -moz-box-shadow: 4px 4px 0 rgba(37,92,146,.45); -webkit-box-shadow: 4px 4px 0 rgba(37,92,146,.45); box-shadow: 4px 4px 0 rgba(37,92,146,.45); padding: 100px 0 0 28px;}
     #upcoming-event p { margin: 0; line-height: 1.2em; font-size: 1.1em; }
       #upcoming-event span { font-size: .7em; }
       #upcoming-event #sign-up { background: url(/plugin_assets/z_b2bbreakfast/images/sign-up.png) no-repeat left top; width: 159px; height: 44px; display: block; text-indent: -9999px; float: right; margin: 8px -12px 0 0; }
@@ -20,7 +20,7 @@ body { margin: 0; padding: 0; font-family: Tahoma, Arial, Sans-Serif; font-size:
   #wrapper-inner { background: url(/plugin_assets/z_b2bbreakfast/images/sb-beach.jpg) repeat-x center 50px; }
       .admin #wrapper-inner { background-position: center top;} 
     #menu-outer { }
-  #header-outer { width: 960px; margin: 0 auto; position: relative; }
+  #header-outer { width: 960px; margin: 0 auto; position: relative; z-index: 6; }
     #header-middle { position: absolute; width: 305px; }
   #menu-outer { background: #3974ac; height: 32px; text-shadow: -1px -1px 1px #0C1B2F; }
       #menu-inner { margin: 0; padding: 0; position: relative; left: 305px; }
